--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p>This page is a page is a page.</p>
+        <p>Test</p>
       </section>
     </div>
 
