--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p>This page is a page is a page.</p>
-        <p>Test</p>
+        <p><a href="http://twitter.com/rock_soup">Twitter</a></p>
       </section>
     </div>
 
