--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-<iframe width='500' height='300' frameBorder='0' src='http://a.tiles.mapbox.com/v3/jaredstoneberg.map-nxquw9vg.html#8/48.359350161704995/-122.221'></iframe>        <p>This page is a page is a page.</p>
-        <p><a href="http://twitter.com/rock_soup">Twitter</a></p>
+<iframe width='700' height='700' frameBorder='0' src='http://a.tiles.mapbox.com/v3/jaredstoneberg.map-nxquw9vg.html#8/47.579372153763025/-121.99439893594578'></iframe>        <p><a href="http://twitter.com/rock_soup">Twitter</a></p>
       </section>
     </div>
 
